# high-performance-order-matching-system

./: .gitignore  CMakeLists.txt  build.bat  order_simulator.py
include/: gui.h  limit_order_book.h  logger.h  market_data.h  matching_engine.h  order.h  order_archive.h  order_location.h  postgres_writer.h  price_level.h  spsc_queue.h  trade.h  trade_publisher.h  types.h
src/: gui.cpp  limit_order_book.cpp  main.cpp  matching_engine.cpp  order_archive.cpp  price_level.cpp
util/: order_simulator.py  start_postgres.bat  stop_postgres.bat  trades_table.sql
